printing domains w/ query, using only real domains
